--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>it.webalice.alexcoppo</groupId>
     <artifactId>lrxl</artifactId>
-    <version>0.0.1-SNAPSHOT
-    </version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>lrxl</name>
     <properties>
@@ -59,6 +58,12 @@
             <artifactId>portlet-api</artifactId>
             <version>2.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf</groupId>
+            <artifactId>jautl</artifactId>
+            <version>0.35.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
